tests/e2e/scaffolding/generate-exclusions/absent-externalsecret-secret-backend-ns.yaml
apiVersion: external-secrets.io/v1
kind: ExternalSecret
metadata:
  name: default-external-secret
  namespace: secret-backend
