tests/e2e/scaffolding/generate-exclusions/absent-networkpolicy-argocd-ns.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-all
  namespace: argocd
