tests/e2e/scaffolding/generate-exclusions/absent-resource-quota-kyverno-ns.yaml
apiVersion: v1
kind: ResourceQuota
metadata:
  name: default-resource-quota
  namespace: kyverno
