tests/e2e/scaffolding/generate-exclusions/new-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: team-orders-e2e
