tests/e2e/scaffolding/generate-exclusions/expected-externalsecret.yaml
apiVersion: external-secrets.io/v1
kind: ExternalSecret
metadata:
  name: default-external-secret
  namespace: team-orders-e2e
