tests/e2e/scaffolding/generate-exclusions/expected-limit-range.yaml
apiVersion: v1
kind: LimitRange
metadata:
  name: default-limit-range
  namespace: team-orders-e2e
