tests/e2e/scaffolding/generate-exclusions/expected-resource-quota.yaml
apiVersion: v1
kind: ResourceQuota
metadata:
  name: default-resource-quota
  namespace: team-orders-e2e
